--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,8 @@
 siteTitle = 'Đà Lạt Yêu Thương'
 siteDescr = 'Địa điểm du lịch + Ăn uống Đà Lạt'
 siteDescription = "Du lịch Đà Lạt"
-siteUrl = "http://dalatyeuthuong.com"
-siteBandcampUrl = 'http://dalatyeuthuong.com'
+siteUrl = "http://monngonmoila.com"
+siteBandcampUrl = 'http://monngonmoila.com'
 siteSoundcloudUrl = 'https://soundcloud.com/sentimony'
 siteFacebookUrl = 'https://www.facebook.com/M%C3%B3n-Ngon-B%C3%ACnh-D%C6%B0%C6%A1ng-185286918690182/'
 siteDiscogsUrl = 'https://www.discogs.com/label/82598-Sentimony-Records'
